<resources>
    <string name="app_name">Breeze</string>
    <string name="account_name">com.google.android.gms.samples.wallet.KEY_USERNAME</string>

    <string name="notification_channel_name">Breeze</string>

    <string name="msg_auth_token_key">token</string>
    <string name="msg_path_start">inbox</string>
    <string name="msg_path_message">messages</string>
    <string name="msg_path_action_delete">trash</string>
    <string name="msg_query_page">offset</string>
    <string name="msg_query_size">limit</string>
    <string name="msg_field_message_text">body</string>
    <string name="msg_field_message_subject">subject</string>
    <string name="msg_field_participant_id">participants[][id]</string>
    <string name="msg_field_participant_name">participants[][name]</string>
    <string name="msg_field_participant_type">partcipants[][type]</string>
    <string name="msg_field_linked_id">linked_data[id]</string>
    <string name="msg_field_linked_type">linked_data[type]</string>
    <string name="msg_field_type_value_patient">patient</string>
    <string name="msg_field_type_value_provider">provider</string>
    <string name="msg_query_source">source</string>
    <string name="msg_query_source_value">desktop:patientPortal:messaging:sendMessage</string>

    <string name="content_description_signin">signInScreen</string>
    <string name="content_description_signin_user">signInScreenUser</string>
    <string name="content_description_signin_password">signInScreenPassword</string>
    <string name="content_description_signin_button">signInScreenButton</string>
    <string name="content_description_choose_profile_screen">chooseProfileScreen</string>
    <string name="content_description_appointment_screen">appointmentScreen</string>
    <string name="content_description_appointments_screen_button">Appointments Screen button</string>
    <string name="content_description_my_health_screen_button">My Health Screen button</string>
    <string name="content_description_payments_screen_button">Payments Screen button</string>
    <string name="content_description_messages_screen_button">Messages Screen button</string>
    <string name="content_description_forms_screen_button">Forms Screen button</string>
    <string name="content_description_shop_screen_button">Shop Screen button</string>
    <string name="content_description_notifications_screen_button">Notifications Screen button</string>
    <string name="content_description_payment_options_button">Payment Options button</string>
    <string name="content_description_not_now_button">Not Now button</string>
    <string name="content_description_ok_button">Ok button</string>
    <string name="content_description_skip_tutorial">Skip tutorial</string>
</resources>
