<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:showIn="@layout/activity_navigation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/menuHeader"
            layout="@layout/nav_header_navigation" />

        <LinearLayout
            android:id="@+id/secondaryMenuItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainMenuItemContainer"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/mainMenuItemContainerTopPadding">

            <com.carecloud.carepaylibray.customcomponents.CustomMenuItem
                android:id="@+id/manageProfilesMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:labelTextKey="navigation_link_manage_profiles" />

            <com.carecloud.carepaylibray.customcomponents.CustomMenuItem
                android:id="@+id/settingsMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelTextKey="navigation_link_profile_settings" />

            <com.carecloud.carepaylibray.customcomponents.CustomMenuItem
                android:id="@+id/logOutMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelTextKey="navigation_link_sign_out" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profilesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/secondaryMenuItemContainer"
            android:layout_below="@id/menuHeader"
            android:paddingTop="@dimen/mainMenuItemContainerTopPadding"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/mainMenuItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menuHeader"
            android:orientation="vertical"
            android:paddingTop="@dimen/mainMenuItemContainerTopPadding">

            <com.carecloud.carepaylibray.customcomponents.CustomMenuItem
                android:id="@+id/appointmentMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageSource="@drawable/icn_drawer_appointments"
                app:labelTextKey="navigation_link_appointments"
                android:contentDescription="@string/content_description_appointments_screen_button"/>

            <com.carecloud.carepaylibray.customcomponents.CustomMenuItem
                android:id="@+id/myHealthMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageSource="@drawable/icn_drawer_my_health"
                app:labelTextKey="navigation_link_my_health"
                android:contentDescription="@string/content_description_my_health_screen_button"/>

            <com.carecloud.carepaylibray.customcomponents.CustomMenuItem
                android:id="@+id/paymentsMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageSource="@drawable/ic_icn_drawer_payments_default"
                app:labelTextKey="navigation_link_payments"
                android:contentDescription="@string/content_description_payments_screen_button"/>

            <com.carecloud.carepaylibray.customcomponents.CustomMenuItem
                android:id="@+id/messagesMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageSource="@drawable/icn_messages"
                app:labelTextKey="navigation_link_messages"
                android:contentDescription="@string/content_description_messages_screen_button"/>

            <com.carecloud.carepaylibray.customcomponents.CustomMenuItem
                android:id="@+id/formsMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageSource="@drawable/ic_forms"
                app:labelTextKey="adhoc_show_forms_button_label"
                android:contentDescription="@string/content_description_forms_screen_button"/>

            <com.carecloud.carepaylibray.customcomponents.CustomMenuItem
                android:id="@+id/shopMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageSource="@drawable/icn_drawer_purchase_default"
                app:labelTextKey="shop_button"
                android:contentDescription="@string/content_description_shop_screen_button"/>

            <com.carecloud.carepaylibray.customcomponents.CustomMenuItem
                android:id="@+id/notificationsMenuItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageSource="@drawable/icn_drawer_notifications"
                app:labelTextKey="notifications_heading"
                android:contentDescription="@string/content_description_notifications_screen_button"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/menuItemSeparatorVerticalMargin"
                android:layout_marginBottom="@dimen/menuItemSeparatorVerticalMargin"
                android:background="@color/light_gray" />

        </LinearLayout>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>